<resources>
    <string name="app_name">Score Keeper</string>
    <string name="team_1">team_1</string>
    <string name="minus_button">minus_button</string>
    <string name="plus_button">plus_button</string>
    <string name="team_2">team_2</string>
    <string name="initial_count">0</string>
    <string name="initial_count2">0</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
</resources>
