<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/team_1"
            style="@style/ScoreText"/>
        <ImageButton
            android:id="@+id/decreaseTeam1"
            android:layout_width="@dimen/team1_width"
            android:layout_height="@dimen/team1_height"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/minus_button"
            android:src="@drawable/ic_minus"
            android:background="@drawable/button_background"
            style="@style/MinusButtons"
            android:onClick="decreaseScore"/>

        <TextView
            android:id="@+id/score_1"
            style="@style/ScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="101dp"
            android:text="@string/initial_count" />
        <ImageButton
            android:id="@+id/increaseTeam1"
            android:layout_width="@dimen/tm1_width"
            android:layout_height="@dimen/tm1_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/plus_button"
            android:src="@drawable/ic_plus"
            android:background="@drawable/button_background"
            android:onClick="increaseScore"
            style="@style/PlusButtons"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/team_2"
            style="@style/ScoreText"
            />
        <ImageButton
            android:id="@+id/decreaseTeam2"
        android:layout_width="@dimen/team2_width"
        android:layout_height="@dimen/team2_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/minus_button"
        android:src="@drawable/ic_minus"
            android:background="@drawable/button_background"
            android:onClick="decreaseScore"
            style="@style/MinusButtons"/>


        <TextView
            android:id="@+id/score_2"
            style="@style/ScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/initial_count2" />
        <ImageButton
            android:id="@+id/increaseTeam2"
            android:layout_width="@dimen/tm2_width"
            android:layout_height="@dimen/tm2_height"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/plus_button"
            android:src="@drawable/ic_plus"
            android:background="@drawable/button_background"
            android:onClick="increaseScore"
            style="@style/PlusButtons"/>

    </RelativeLayout>
</LinearLayout>